manifests/modular-architecture/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: odh-dashboard-allow-ports
spec:
  podSelector:
    matchLabels:
      deployment: odh-dashboard
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8443
          protocol: TCP
        - port: 8043
          protocol: TCP
        - port: 8143
          protocol: TCP
        - port: 8243
          protocol: TCP
        - port: 8343
          protocol: TCP
        - port: 8543
          protocol: TCP
        - port: 8643
          protocol: TCP
        - port: 8743
          protocol: TCP
        - port: 8843
          protocol: TCP
      from:
        # Allow traffic from OpenShift ingress controller
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
        # Allow traffic from pods in the same namespace
        - podSelector: {}
